面板最小高度修改为300 & 文件搜索优化